Bug 18503 - procfs .maxsize() overflow should generate error
Summary: procfs .maxsize() overflow should generate error
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: runtime (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-08 20:39 UTC by Frank Ch. Eigler
Modified: 2015-08-20 14:08 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Ch. Eigler 2015-06-08 20:39:12 UTC
probe procfs("foo").read.maxsize(10) {
  $return .= "hello hello hello hello hello hello"
}

... should signal an error or warning, so that a stap script user can tell that her buffer was too small.  (We already detect the overflow, just don't signal it.)
Comment 1 Felix Lu 2015-08-20 14:08:08 UTC
Fixed in commit 3eea5e1066e47b528bff0d92546ef08af110ad13.