PR18503: include procfs .maxsize overflow error

* tapset-procfs.cxx - after writing to buffer, generate an error if
  buffer size is not enough